--- a/public/assets/css/instructor/course.css
+++ b/public/assets/css/instructor/course.css
@@ -30,3 +30,29 @@
     color: rgb(108, 138, 236);
 }
 
+.inputWithIcon {
+    position: relative;
+  }
+
+.inputWithIcon i {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 7px 8px;
+    color: #aaa;
+    transition: 0.3s;
+}
+
+.inputWithIcon input[type="number"]:focus + i {
+    color: dodgerBlue;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+  }
